--- a/index.html
+++ b/index.html
@@ -16,14 +16,13 @@
                     Masukkan suhu dalam derajat Celsius (&deg;C) ke dalam form input ini, lalu klik tombol konversi untuk mendapatkan hasilnya dalam bentuk Fahrenheit (&deg;F).
                 </h2>
             </div>
-            <form onsubmit="event.preventDefault(); convertToFahrenheit();"> <!-- Form untuk input suhu Celsius -->
-                <label for="celsius">Celsius (&deg;C):</label>
-                <textarea id="celsius" name="celsius" rows="3" required></textarea> <!-- Input suhu Celsius -->
+            <form id="formInput" onsubmit="event.preventDefault(); validateForm(); "> <!-- Form untuk input suhu Celsius -->
+                <label for="celsiusInput" id="lblCelcius">Celsius (&deg;C):</label>
+                <textarea id="celsiusInput" name="celsius" rows="3" required></textarea> <!-- Input suhu Celsius -->
                 <button type="submit">Konversi</button> <!-- Tombol untuk mengonversi Celsius ke Fahrenheit -->
                 <button type="button" onclick="resetFields()">Reset</button> <!-- Tombol untuk mereset input -->
                 <button type="button" onclick="reverseConversion()">Reverse</button> <!-- Tombol untuk konversi balik dari Fahrenheit ke Celsius -->
             </form>
-            
             <div>
                 <label for="fahrenheit-result" id="fahrenheit-result">Fahrenheit (&deg;F):</label>
                 <textarea id="fahrenheit" name="fahrenheit" rows="3" readonly></textarea> <!-- Output hasil suhu Fahrenheit -->
